crates/pg_syntax/tests/snapshots/postgres_regress/join@402.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT b.* FROM b LEFT JOIN a ON (b.a_id = a.id) WHERE (a.id IS NULL OR a.id > 0);
---
SelectStmt@0..82
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..8 "b"
      Ascii46@8..9 "."
      AStar@9..10
        Ascii42@9..10 "*"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  JoinExpr@16..47
    RangeVar@16..17
      Ident@16..17 "b"
    Whitespace@17..18 " "
    Left@18..22 "LEFT"
    Whitespace@22..23 " "
    Join@23..27 "JOIN"
    Whitespace@27..28 " "
    RangeVar@28..29
      Ident@28..29 "a"
    Whitespace@29..30 " "
    On@30..32 "ON"
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    AExpr@34..47
      ColumnRef@34..40
        Ident@34..35 "b"
        Ascii46@35..36 "."
        Ident@36..40 "a_id"
      Whitespace@40..41 " "
      Ascii61@41..42 "="
      Whitespace@42..43 " "
      ColumnRef@43..47
        Ident@43..44 "a"
        Ascii46@44..45 "."
        Ident@45..47 "id"
  Ascii41@47..48 ")"
  Whitespace@48..49 " "
  Where@49..54 "WHERE"
  Whitespace@54..55 " "
  Ascii40@55..56 "("
  BoolExpr@56..80
    NullTest@56..68
      ColumnRef@56..60
        Ident@56..57 "a"
        Ascii46@57..58 "."
        Ident@58..60 "id"
      Whitespace@60..61 " "
      Is@61..63 "IS"
      Whitespace@63..64 " "
      NullP@64..68 "NULL"
    Whitespace@68..69 " "
    Or@69..71 "OR"
    Whitespace@71..72 " "
    AExpr@72..80
      ColumnRef@72..76
        Ident@72..73 "a"
        Ascii46@73..74 "."
        Ident@74..76 "id"
      Whitespace@76..77 " "
      Ascii62@77..78 ">"
      Whitespace@78..79 " "
      AConst@79..80
        Iconst@79..80 "0"
  Ascii41@80..81 ")"
  Ascii59@81..82 ";"

