crates/pg_syntax/tests/snapshots/postgres_regress/join@406.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into innertab values(123, 42);"
---
InsertStmt@0..37
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "innertab"
  Whitespace@20..21 " "
  SelectStmt@21..35
    Values@21..27 "values"
    Ascii40@27..28 "("
    List@28..35
      AConst@28..31
        Iconst@28..31 "123"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..35
        Iconst@33..35 "42"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

