crates/pg_syntax/tests/snapshots/postgres_regress/join@407.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM\n    (SELECT 1 AS x) ss1\n  LEFT JOIN\n    (SELECT q1, q2, COALESCE(dat1, q1) AS y\n     FROM int8_tbl LEFT JOIN innertab ON q2 = id) ss2\n  ON true;"
---
SelectStmt@0..158
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Newline@13..14 "\n"
  Whitespace@14..18 "    "
  Ascii40@18..19 "("
  JoinExpr@19..157
    RangeSubselect@19..37
      SelectStmt@19..32
        Select@19..25 "SELECT"
        Whitespace@25..26 " "
        ResTarget@26..32
          AConst@26..27
            Iconst@26..27 "1"
          Whitespace@27..28 " "
          As@28..30 "AS"
          Whitespace@30..31 " "
          Ident@31..32 "x"
      Ascii41@32..33 ")"
      Whitespace@33..34 " "
      Alias@34..37
        Ident@34..37 "ss1"
    Newline@37..38 "\n"
    Whitespace@38..40 "  "
    Left@40..44 "LEFT"
    Whitespace@44..45 " "
    Join@45..49 "JOIN"
    Newline@49..50 "\n"
    Whitespace@50..54 "    "
    Ascii40@54..55 "("
    RangeSubselect@55..147
      SelectStmt@55..142
        Select@55..61 "SELECT"
        Whitespace@61..62 " "
        ResTarget@62..64
          ColumnRef@62..64
            Ident@62..64 "q1"
        Ascii44@64..65 ","
        Whitespace@65..66 " "
        ResTarget@66..68
          ColumnRef@66..68
            Ident@66..68 "q2"
        Ascii44@68..69 ","
        Whitespace@69..70 " "
        ResTarget@70..93
          CoalesceExpr@70..87
            Coalesce@70..78 "COALESCE"
            Ascii40@78..79 "("
            ColumnRef@79..83
              Ident@79..83 "dat1"
            Ascii44@83..84 ","
            Whitespace@84..85 " "
            ColumnRef@85..87
              Ident@85..87 "q1"
          Ascii41@87..88 ")"
          Whitespace@88..89 " "
          As@89..91 "AS"
          Whitespace@91..92 " "
          Ident@92..93 "y"
        Newline@93..94 "\n"
        Whitespace@94..99 "     "
        From@99..103 "FROM"
        Whitespace@103..104 " "
        JoinExpr@104..142
          RangeVar@104..112
            Ident@104..112 "int8_tbl"
          Whitespace@112..113 " "
          Left@113..117 "LEFT"
          Whitespace@117..118 " "
          Join@118..122 "JOIN"
          Whitespace@122..123 " "
          RangeVar@123..131
            Ident@123..131 "innertab"
          Whitespace@131..132 " "
          On@132..134 "ON"
          Whitespace@134..135 " "
          AExpr@135..142
            ColumnRef@135..137
              Ident@135..137 "q2"
            Whitespace@137..138 " "
            Ascii61@138..139 "="
            Whitespace@139..140 " "
            ColumnRef@140..142
              Ident@140..142 "id"
      Ascii41@142..143 ")"
      Whitespace@143..144 " "
      Alias@144..147
        Ident@144..147 "ss2"
    Newline@147..148 "\n"
    Whitespace@148..150 "  "
    On@150..152 "ON"
    Whitespace@152..153 " "
    AConst@153..157
      TrueP@153..157 "true"
  Ascii59@157..158 ";"

