crates/pg_syntax/tests/snapshots/postgres_regress/join@413.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select t0.*\nfrom\n text_tbl t0\n left join\n   (select case t1.ten when 0 then 'doh!'::text else null::text end as case1,\n           t1.stringu2\n     from tenk1 t1\n     join int4_tbl i4 ON i4.f1 = t1.unique2\n     left join uniquetbl u1 ON u1.f1 = t1.string4) ss\n  on t0.f1 = ss.case1\nwhere ss.stringu2 !~* ss.case1;"
---
SelectStmt@0..312
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      Ident@7..9 "t0"
      Ascii46@9..10 "."
      AStar@10..11
        Ascii42@10..11 "*"
  Newline@11..12 "\n"
  From@12..16 "from"
  Newline@16..17 "\n"
  Whitespace@17..18 " "
  JoinExpr@18..280
    RangeVar@18..29
      Ident@18..26 "text_tbl"
      Whitespace@26..27 " "
      Alias@27..29
        Ident@27..29 "t0"
    Newline@29..30 "\n"
    Whitespace@30..31 " "
    Left@31..35 "left"
    Whitespace@35..36 " "
    Join@36..40 "join"
    Newline@40..41 "\n"
    Whitespace@41..44 "   "
    Ascii40@44..45 "("
    RangeSubselect@45..258
      SelectStmt@45..254
        Select@45..51 "select"
        Whitespace@51..52 " "
        ResTarget@52..117
          CaseExpr@52..108
            Case@52..56 "case"
            Whitespace@56..57 " "
            ColumnRef@57..63
              Ident@57..59 "t1"
              Ascii46@59..60 "."
              Ident@60..63 "ten"
            Whitespace@63..64 " "
            CaseWhen@64..88
              When@64..68 "when"
              Whitespace@68..69 " "
              AConst@69..70
                Iconst@69..70 "0"
              Whitespace@70..71 " "
              Then@71..75 "then"
              Whitespace@75..76 " "
              TypeCast@76..88
                AConst@76..82
                  Sconst@76..82 "'doh!'"
                Typecast@82..84 "::"
                TypeName@84..88
                  TextP@84..88 "text"
            Whitespace@88..89 " "
            Else@89..93 "else"
            Whitespace@93..94 " "
            TypeCast@94..104
              AConst@94..98
                NullP@94..98 "null"
              Typecast@98..100 "::"
              TypeName@100..104
                TextP@100..104 "text"
            Whitespace@104..105 " "
            EndP@105..108 "end"
          Whitespace@108..109 " "
          As@109..111 "as"
          Whitespace@111..112 " "
          Ident@112..117 "case1"
        Ascii44@117..118 ","
        Newline@118..119 "\n"
        Whitespace@119..130 "           "
        ResTarget@130..141
          ColumnRef@130..141
            Ident@130..132 "t1"
            Ascii46@132..133 "."
            Ident@133..141 "stringu2"
        Newline@141..142 "\n"
        Whitespace@142..147 "     "
        From@147..151 "from"
        Whitespace@151..152 " "
        JoinExpr@152..254
          JoinExpr@152..204
            RangeVar@152..160
              Ident@152..157 "tenk1"
              Whitespace@157..158 " "
              Alias@158..160
                Ident@158..160 "t1"
            Newline@160..161 "\n"
            Whitespace@161..166 "     "
            Join@166..170 "join"
            Whitespace@170..171 " "
            RangeVar@171..182
              Ident@171..179 "int4_tbl"
              Whitespace@179..180 " "
              Alias@180..182
                Ident@180..182 "i4"
            Whitespace@182..183 " "
            On@183..185 "ON"
            Whitespace@185..186 " "
            AExpr@186..204
              ColumnRef@186..191
                Ident@186..188 "i4"
                Ascii46@188..189 "."
                Ident@189..191 "f1"
              Whitespace@191..192 " "
              Ascii61@192..193 "="
              Whitespace@193..194 " "
              ColumnRef@194..204
                Ident@194..196 "t1"
                Ascii46@196..197 "."
                Ident@197..204 "unique2"
          Newline@204..205 "\n"
          Whitespace@205..210 "     "
          Left@210..214 "left"
          Whitespace@214..215 " "
          Join@215..219 "join"
          Whitespace@219..220 " "
          RangeVar@220..232
            Ident@220..229 "uniquetbl"
            Whitespace@229..230 " "
            Alias@230..232
              Ident@230..232 "u1"
          Whitespace@232..233 " "
          On@233..235 "ON"
          Whitespace@235..236 " "
          AExpr@236..254
            ColumnRef@236..241
              Ident@236..238 "u1"
              Ascii46@238..239 "."
              Ident@239..241 "f1"
            Whitespace@241..242 " "
            Ascii61@242..243 "="
            Whitespace@243..244 " "
            ColumnRef@244..254
              Ident@244..246 "t1"
              Ascii46@246..247 "."
              Ident@247..254 "string4"
      Ascii41@254..255 ")"
      Whitespace@255..256 " "
      Alias@256..258
        Ident@256..258 "ss"
    Newline@258..259 "\n"
    Whitespace@259..261 "  "
    On@261..263 "on"
    Whitespace@263..264 " "
    AExpr@264..280
      ColumnRef@264..269
        Ident@264..266 "t0"
        Ascii46@266..267 "."
        Ident@267..269 "f1"
      Whitespace@269..270 " "
      Ascii61@270..271 "="
      Whitespace@271..272 " "
      ColumnRef@272..280
        Ident@272..274 "ss"
        Ascii46@274..275 "."
        Ident@275..280 "case1"
  Newline@280..281 "\n"
  Where@281..286 "where"
  Whitespace@286..287 " "
  AExpr@287..311
    ColumnRef@287..298
      Ident@287..289 "ss"
      Ascii46@289..290 "."
      Ident@290..298 "stringu2"
    Whitespace@298..299 " "
    Op@299..302 "!~*"
    Whitespace@302..303 " "
    ColumnRef@303..311
      Ident@303..305 "ss"
      Ascii46@305..306 "."
      Ident@306..311 "case1"
  Ascii59@311..312 ";"

