crates/pg_syntax/tests/snapshots/postgres_regress/join@419.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into parttbl values (11), (12);"
---
InsertStmt@0..38
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..19
    Ident@12..19 "parttbl"
  Whitespace@19..20 " "
  SelectStmt@20..36
    Values@20..26 "values"
    Whitespace@26..27 " "
    Ascii40@27..28 "("
    List@28..30
      AConst@28..30
        Iconst@28..30 "11"
    Ascii41@30..31 ")"
    Ascii44@31..32 ","
    Whitespace@32..33 " "
    Ascii40@33..34 "("
    List@34..36
      AConst@34..36
        Iconst@34..36 "12"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

