crates/pg_syntax/tests/snapshots/postgres_regress/join@421.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from\n  (select *, 12 as phv from parttbl) as ss\n  right join int4_tbl on true\nwhere ss.a = ss.phv and f1 = 0;"
---
SelectStmt@0..118
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Newline@13..14 "\n"
  Whitespace@14..16 "  "
  Ascii40@16..17 "("
  JoinExpr@17..86
    RangeSubselect@17..56
      SelectStmt@17..49
        Select@17..23 "select"
        Whitespace@23..24 " "
        ResTarget@24..25
          ColumnRef@24..25
            AStar@24..25
              Ascii42@24..25 "*"
        Ascii44@25..26 ","
        Whitespace@26..27 " "
        ResTarget@27..36
          AConst@27..29
            Iconst@27..29 "12"
          Whitespace@29..30 " "
          As@30..32 "as"
          Whitespace@32..33 " "
          Ident@33..36 "phv"
        Whitespace@36..37 " "
        From@37..41 "from"
        Whitespace@41..42 " "
        RangeVar@42..49
          Ident@42..49 "parttbl"
      Ascii41@49..50 ")"
      Whitespace@50..51 " "
      Alias@51..56
        As@51..53 "as"
        Whitespace@53..54 " "
        Ident@54..56 "ss"
    Newline@56..57 "\n"
    Whitespace@57..59 "  "
    Right@59..64 "right"
    Whitespace@64..65 " "
    Join@65..69 "join"
    Whitespace@69..70 " "
    RangeVar@70..78
      Ident@70..78 "int4_tbl"
    Whitespace@78..79 " "
    On@79..81 "on"
    Whitespace@81..82 " "
    AConst@82..86
      TrueP@82..86 "true"
  Newline@86..87 "\n"
  Where@87..92 "where"
  Whitespace@92..93 " "
  BoolExpr@93..117
    AExpr@93..106
      ColumnRef@93..97
        Ident@93..95 "ss"
        Ascii46@95..96 "."
        Ident@96..97 "a"
      Whitespace@97..98 " "
      Ascii61@98..99 "="
      Whitespace@99..100 " "
      ColumnRef@100..106
        Ident@100..102 "ss"
        Ascii46@102..103 "."
        Ident@103..106 "phv"
    Whitespace@106..107 " "
    And@107..110 "and"
    Whitespace@110..111 " "
    AExpr@111..117
      ColumnRef@111..113
        Ident@111..113 "f1"
      Whitespace@113..114 " "
      Ascii61@114..115 "="
      Whitespace@115..116 " "
      AConst@116..117
        Iconst@116..117 "0"
  Ascii59@117..118 ";"

