crates/pg_syntax/tests/snapshots/postgres_regress/join@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO J1_TBL VALUES (3, 2, 'three');"
---
InsertStmt@0..42
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "J1_TBL"
  Whitespace@18..19 " "
  SelectStmt@19..40
    Values@19..25 "VALUES"
    Whitespace@25..26 " "
    Ascii40@26..27 "("
    List@27..40
      AConst@27..28
        Iconst@27..28 "3"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..31
        Iconst@30..31 "2"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..40
        Sconst@33..40 "'three'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

