crates/pg_syntax/tests/snapshots/postgres_regress/join@500.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: delete from xx1 using (select * from int4_tbl where f1 = xx1.x1) ss;
---
DeleteStmt@0..68
  DeleteP@0..6 "delete"
  Whitespace@6..7 " "
  From@7..11 "from"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "xx1"
  Whitespace@15..16 " "
  Using@16..21 "using"
  Whitespace@21..22 " "
  Ascii40@22..23 "("
  RangeSubselect@23..67
    SelectStmt@23..63
      Select@23..29 "select"
      Whitespace@29..30 " "
      ResTarget@30..31
        ColumnRef@30..31
          AStar@30..31
            Ascii42@30..31 "*"
      Whitespace@31..32 " "
      From@32..36 "from"
      Whitespace@36..37 " "
      RangeVar@37..45
        Ident@37..45 "int4_tbl"
      Whitespace@45..46 " "
      Where@46..51 "where"
      Whitespace@51..52 " "
      AExpr@52..63
        ColumnRef@52..54
          Ident@52..54 "f1"
        Whitespace@54..55 " "
        Ascii61@55..56 "="
        Whitespace@56..57 " "
        ColumnRef@57..63
          Ident@57..60 "xx1"
          Ascii46@60..61 "."
          Ident@61..63 "x1"
    Ascii41@63..64 ")"
    Whitespace@64..65 " "
    Alias@65..67
      Ident@65..67 "ss"
  Ascii59@67..68 ";"

