crates/pg_syntax/tests/snapshots/postgres_regress/join@503.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table join_pt1p1 partition of join_pt1 for values from (0) to (100) partition by range(b);
---
CreateStmt@0..97
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..23
    Ident@13..23 "join_pt1p1"
  Whitespace@23..24 " "
  Partition@24..33 "partition"
  Whitespace@33..34 " "
  Of@34..36 "of"
  Whitespace@36..37 " "
  RangeVar@37..45
    Ident@37..45 "join_pt1"
  Whitespace@45..46 " "
  For@46..49 "for"
  Whitespace@49..50 " "
  Values@50..56 "values"
  Whitespace@56..57 " "
  PartitionBoundSpec@57..73
    From@57..61 "from"
    Whitespace@61..62 " "
    Ascii40@62..63 "("
    AConst@63..64
      Iconst@63..64 "0"
    Ascii41@64..65 ")"
    Whitespace@65..66 " "
    To@66..68 "to"
    Whitespace@68..69 " "
    Ascii40@69..70 "("
    AConst@70..73
      Iconst@70..73 "100"
  Ascii41@73..74 ")"
  Whitespace@74..75 " "
  PartitionSpec@75..95
    Partition@75..84 "partition"
    Whitespace@84..85 " "
    By@85..87 "by"
    Whitespace@87..88 " "
    Range@88..93 "range"
    Ascii40@93..94 "("
    PartitionElem@94..95
      Ident@94..95 "b"
  Ascii41@95..96 ")"
  Ascii59@96..97 ";"

